name:                lleca
version:             1.0.0.0
synopsis:            Parser generator made in Haskell
description:         Please see README.md
homepage:            https://github.com/sawady/lleca
license:             BSD3
license-file:        LICENSE
author:              Federico Sawady and Damian Lattenero
maintainer:          sawady.faso@gmail.com
copyright:           2017 Federico Sawady
category:            Language
build-type:          Simple
extra-source-files:  src/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer,
                       Parser
  build-depends:       base >= 4.7 && < 5
  build-tools:         happy
  default-language:    Haskell2010
  ghc-options:         -threaded

executable lleca-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lleca
  default-language:    Haskell2010

test-suite lleca-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SpecLexer
  build-depends:       base
                     , lleca
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lleca
